Alignment issue fixes on details page

--- a/src/components/movieDetails/movieDetails.css
+++ b/src/components/movieDetails/movieDetails.css
@@ -12,27 +12,89 @@
     margin-top: 30px;
 }
 .movie-logo-section{
-    width: 40%;
+    /* width: 40%;
     height: 80%;
     flex: 1;
     padding: 30px;
     background: seashell;
     margin-right: 10px;
-    border-radius: 10px;
+    border-radius: 10px; */
+        /* width: 40%; */
+    /* height: 80%; */
+    flex: 1 1;
+    /* padding: 30px; */
+    /* background: #f2f2f2; */
+    margin-right: 10px;
+    border-radius: 5px;
 }
 .movie-contents-section{
-    width: 40%;
-    height: 80%;
-    flex: 1;
-    padding: 30px;
-    background: seashell;
+        /* width: 40%; */
+    /* height: 80%; */
+    flex: 1 1;
+    /* padding: 30px; */
+    /* background: #f2f2f2; */
     margin-right: 10px;
-    border-radius: 10px;
+    border-radius: 5px;
 }
 .image-details-style {
     width: 500px;
     height: 500px;
-    margin-left: 60px;
+    margin-left: 130px;
     margin-top: 50px;
     border-radius: 10px;
+}
+.go-back-btn {
+    width: 50px;
+    height: 30px;
+    border-radius: 5px;
+}
+.movie-contents-section-div {
+    border: 1px #f2f2f2 solid;
+    width: 550px;
+    height: 500px;
+    /* margin-left: 130px; */
+    margin-top: 80px;
+    border-radius: 10px;
+    margin-left: -38px;
+    background: #f2f2f2;
+}
+.root-container {
+    padding: 30px;
+}
+.parent-1 {
+    display: flex;
+    flex-direction: row;
+    margin-top: 20px;
+    font-style: fantasy !important;
+}
+.movie-details-heading{
+    margin-left: 20px;
+    padding: 10px;
+}
+.div-for-hor-line {
+    border-bottom: 3px gray solid;
+}
+.parent-1-1 {
+    float: right;
+}
+.book-movie-button {
+    width: 100px;
+    margin: 0 auto;
+    height: 30px;
+    background: #0078ff;
+    color: #FFFFFF;
+    font-weight: bold;
+    border-radius: 3px;
+    cursor: not-allowed;
+    opacity: 0.8;
+}
+.child-1 {
+    color: #333;
+    font-weight: 700;
+    font-size: 14px;
+    margin-right: 10px;
+}
+.child-11 {
+    color: #666;
+    line-height: 22px;
 }
