--- a/src/components/moviesList/moviesList.css
+++ b/src/components/moviesList/moviesList.css
@@ -25,7 +25,7 @@
 .App-header {
   background-color: #1976d2;
   /* #1976d2  cadetblue*/
-  min-height: 10vh;
+  min-height: 8vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -52,23 +52,33 @@
   color: #fff;
   border-radius: 5px;
   padding: 5px;
+  font-size: 25px;
+  font-family: fantasy;
+  font-weight: bold;
 }
 
 .SearchBoxSection {
   padding: 6px;
-  font-size: 17px;
+  font-size: 12px;
   border: 2px;
-  margin-left: 20px;
+  margin-left: 10px;
+  width: 250px;
+  border-radius: 5px;
 }
 
 .clear-search-btn {
   width: 120px;
   height: 30px;
-  border-radius: 3px;
+  border-radius: 5px;
   background: white;
   font-size: 15px;
   cursor: pointer;
+  font-family: sans-serif;
 }
 .movie-name-title{
   padding: 5px;
+  font-family: Trebuchet;
+  font-size: 18px;
+  color: lightcoral;
+  font-weight: 600;
 }
